# ida-chooser

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  README.org  build.zig  go.mod  ida-chooser.cpp  ida-chooser.h  idaChooser.nimble  install.ps1  installer.ps1  integrate-shell.reg  main.go  utilities.cpp  utils.go
src/: CMakeLists.txt  ida-chooser.h  idaChooser.nim  main.zig  registry.zig  string-manupilation.cpp  utilities.cpp  utils.nim  utils.zig
